# homework-coach-robo

./: .editorconfig  .env.example  .gitignore  .mcp.json  Article-Zenn.md  CLAUDE.md  README.md  Reflection.md  docker-compose.e2e.yml  docker-compose.gcloud.yml  docker-compose.yml  issue-agent-engine-deployment.md  issue-agent-engine-resource-name-fix.md
backend/: .env.example  .gitignore  agent_engine_requirements.txt  pyproject.toml
backend/.steering/20260211-agent-engine-router-integration/: design.md  requirements.md  tasklist.md
backend/.steering/20260211-phase2-websocket-events/: SUSPENDED.md
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  dialogue.py  dialogue_runner.py  router.py  vision.py  voice_stream.py
backend/app/core/: __init__.py  config.py  dependencies.py
backend/app/db/: __init__.py
backend/app/schemas/: __init__.py  bigquery.py  dialogue.py  dialogue_runner.py  storage.py  vision.py  voice_stream.py
backend/app/services/: storage_service.py
backend/app/services/adk/: __init__.py
backend/app/services/bigquery/: __init__.py  bigquery_service.py
backend/app/services/voice/: __init__.py  streaming_service.py
backend/app/testing/: __init__.py  mock_runner.py  mock_voice.py
backend/app/websocket/: __init__.py
backend/scripts/: create_agent_engine.py  deploy_agent_engine.py  initialize_rag_corpus.py  migrate_sessions.py  serialize_agent.py  test_agent_engine.py
backend/tests/: conftest.py
backend/tests/integration/: test_session_migration.py
backend/tests/unit/schemas/: test_bigquery.py  test_dialogue_runner.py  test_dialogue_schemas.py  test_storage.py  test_vision.py  test_voice_stream.py  test_voice_stream_phase2.py
backend/tests/unit/services/: __init__.py  test_cloud_storage_service.py  test_mock_storage_service.py  test_storage_service_interface.py
poc/server/: .env.example  .env.google-ai-studio  main.py  main_direct.py  pyproject.toml  test_audio.py  test_connection.py
poc/server/tutor_agent/: __init__.py  agent.py  prompts.py
poc/server/tutor_agent/.adk/: session.db
(+640 files in other folders)
